# solana-ua-bootcamp-2025-03-19

./: .gitignore  FAQ.md  README.md  package-lock.json  package.json
practice-1/key-grinder/: generate-keypairs.ts
practice-1/ts-exersises/: README.md  check-balance.ts  create-token-account.ts  create-token-metadata.ts  create-token-mint.ts  generate-keypairs.ts  load-keypair.ts  mint-tokens.ts  package-lock.json  package.json  read-keypair.ts  send-sol.ts
practice-2/practice-2-in-rust/: Cargo.toml
practice-2/practice-2-in-ts/: package-lock.json  package.json
practice-2/practice-2-in-ts/src/: create_multisig_token.ts  recipient_pays_for_token.ts
practice-3/practice-3-in-rust/: README.md
practice-3/practice-3-in-rust/favorites/: Anchor.toml  package-lock.json
practice-4/practice-4-in-rust/escrow-2/: Anchor.toml  package-lock.json
practice-4/practice-4-in-rust/escrow-2/programs/escrow/: Cargo.toml
practice-4/practice-4-in-rust/escrow-2/tests/: escrow.test.ts
practice-4/practice-4-in-rust/favorites/: Anchor.toml  package-lock.json
practice-4/practice-4-in-rust/favorites/tests/: favorites.test.ts
practice-5/decoded_string/: package-lock.json  package.json  script.ts
practice-5/escrow-front/: package-lock.json  package.json
practice-5/escrow-front/src/: main.tsx
practice-5/escrow-front/src/pages/: custom-tokens.tsx
practice-5/escrow-front/src/solana-service/: program.ts
practice-6/escrow-front/src/: App.tsx
practice-6/escrow-front/src/providers/: index.tsx
practice-6/escrow-front/src/solana-service/: program.ts
(+5 files in other folders)
