[package]
name = "practice-2-in-rust"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["cdylib", "lib"]

[[bin]]
name = "send_sol"
path = "src/bin/send_sol.rs"

[[bin]]
name = "create_t_mint"
path = "src/bin/create_token_mint.rs"

[[bin]]
name = "create_t_acc"
path = "src/bin/create_token_account.rs"

[[bin]]
name = "mint_t"
path = "src/bin/mint_token.rs"

[[bin]]
name = "create_metad"
path = "src/bin/create_token_metadata.rs"


[dependencies]
anchor-lang = "0.31.0"
solana-sdk = "2.2.2" #{ version = "2.2.2", default-features = false }
solana-client = "2.2.2" #{ version = "2.2.2", default-features = false }
dotenvy = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
spl-memo = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = "8.0.1"
solana-program = "2.2.1"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint",]}
spl-token-metadata-interface = "0.7"
